--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />"
     <!-- style css - de uso local -->
     <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="assets/css/pokedex.css">
     <!-- CDN – Content Delivery Network: font roboto - de google fontes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,8 +22,8 @@
 <body>
     <section class="content">
         <h1>Pokedex</h1>
-
-        <ol class="pokemons">
+        
+        <ol id = "pokemonList" class="pokemons">
             <li class="pokemon">
                 <span class="number">001</span>
                 <span class="nome">Bulbasaur</span>
@@ -38,9 +39,12 @@
                 </div>
             </li>
 
+            <!-- Pokemons here -->
+
         </ol>
     </section>
     <!-- Importação JS -->
+    <script src="assets/js/poke-api.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 
