--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokedex</title>
+    <link rel="icon" type="image/x-icon" href="./assets/img/cropped-favicon.png">
+    <title>Pokédex</title>
     <!-- CDN – Content Delivery Network - normalize css - de cdnjs  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -21,12 +22,12 @@
 
 <body>
     <section class="content">
-        <h1>Pokedex</h1>
-        
-        <ol id = "pokemonList" class="pokemons">
+        <h1>Pokédex</h1>
+
+        <ol id="pokemonList" class="pokemons">
             <!-- Pokemons here -->
         </ol>
-        
+
         <div class="pagination">
             <button id="loadMoreButton" type="button">
                 Load More
